Centered correctly on small medium and large screens.

--- a/src/components/LocationSummaryTile/LocationSummaryTile.scss
+++ b/src/components/LocationSummaryTile/LocationSummaryTile.scss
@@ -30,14 +30,22 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   min-height: 12rem;
   font-size: 1.5rem;
+  flex: auto;
+  // width: 100%;
+  // margin-left: 50%;
+  @media (min-width: 1500px) {
+    margin-left: 40%;
+  }
+  @media (max-width: 768px) {
+    margin-left: 40%;
+  }
 }
 .graph {
   position: relative;
   width: 100%;
-  padding-bottom: 9rem;
 }
 .underline {
   float: left;
@@ -85,6 +93,11 @@
   top: 4.7rem;
   left: 2.6rem;
   font-size: .8rem;
+}
+.progress {
+  position: absolute;
+  left: -50px;
+  width: 100px;
 }
 .positive {
   color: green;
